partners and tools design

--- a/src/components/sections/PartnersSection.astro
+++ b/src/components/sections/PartnersSection.astro
@@ -31,7 +31,7 @@ const partners = [
     name: "Sequoia Consulting",
     logo: "/images/logos/partners/sequoia-logo@2x.png",
   },
-  { name: "Stifel Footer", logo: "/images/logos/partners/stifel-logo-footer.png" },
+  { name: "EOS", logo: "/images/logos/partners/EOS_logo_square.jpg" },
 ];
 ---
 
