--- a/src/components/sections/CompetitorsSection.astro
+++ b/src/components/sections/CompetitorsSection.astro
@@ -13,7 +13,7 @@ import divisor from "../../assets/divisor.svg";
     <div class="max-w-6xl mx-auto">
       <div class="mb-12">
         <h2 class="text-3xl md:text-4xl font-bold mb-4 text-secondary-500">
-          Crown Provides More Horsepower to Support Your Growth
+          More Horsepower to Support Your Growth
         </h2>
         <p class="text-xl text-white mx-auto">
           We've benchmarked the space. Most providers offer surface-level support.<br />
