--- a/src/pages/clients/tech6/index.astro
+++ b/src/pages/clients/tech6/index.astro
@@ -12,7 +12,7 @@ import TestimonialsSection from '@components/sections/TestimonialsSection.astro'
 import ContactSection from '@components/sections/ContactSection.astro';
 
 // Import client configuration
-import { clientConfig } from '@/config/clients/tech6.js';
+import { clientConfig } from '@config/clients/tech6.js';
 
 // Set client theme class
 const clientTheme = 'theme-tech6';
